# iFinD-

./: README.md
将同花顺报告自动化转换为结构化信息的程序/: README.md  pyproject.toml
将同花顺报告自动化转换为结构化信息的程序/data/: ifind_reports.db
将同花顺报告自动化转换为结构化信息的程序/src/ifind_report_parser/: cli.py  db.py  loader.py  parser.py  summary.py  table_parser.py
