[project]
name = "ifind-report-parser"
version = "0.1.0"
description = "Parse iFinD enterprise PDF reports into structured SQLite data."
requires-python = ">=3.10"
dependencies = [
  "pdfplumber>=0.11.0",
  "openpyxl>=3.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
